chore: retire legacy fat-jar scripts, refresh docs
- Remove build.sh and run/run-gui launchers (superseded by Gradle + jpackage/jlink)

- Rewrite README to reflect current GUI+CLI layered architecture and Gradle build/release flow

- Fix dangling build.sh/run-gui references in build.gradle, lib/README.md, AppVersion.java, module-info.java, DataCube.java